--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aos": "^2.3.4",
     "framer-motion": "^10.16.4",
-    "lottie-react": "^2.4.0",
-    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.20.0"
   },
