--- a/backend/.env
+++ b/backend/.env
@@ -3,11 +3,11 @@ PORT=5000
 NODE_ENV=development
 
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=hopper.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=123456
-DB_NAME=eliteinfox
-DB_PORT=3306
+DB_PASSWORD=PYvosNgMNfhasAzypPHWeUrltEmwcqVK
+DB_NAME=railway
+DB_PORT=51528
 
 # JWT Configuration
 JWT_SECRET=eliteinfox
